--- a/styles/style.css
+++ b/styles/style.css
@@ -41,4 +41,72 @@ html {
 .grey-container {
     background-color: lightgray;
     width: 70%;
+    display: flex;
+    flex-direction: column;
+}
+
+.top-wrapper {
+    flex: 1;
+}
+
+.top-wrapper p {
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 40px;
+    width: 60%;
+
+}
+
+.form-wrapper {
+    flex: 1.3;
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.form-wrapper div {
+    margin: 35px;
+    position: relative;
+}
+
+.form-wrapper label {
+    font-size: 0.8rem;
+    position: absolute;
+    bottom: 25px;
+}
+
+.form-wrapper input {
+    margin-right: 50px;
+    padding: 2px;
+}
+
+.form-wrapper p {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-left: 40px;
+}
+
+.bottom-wrapper {
+    flex: 1;
+}
+
+button {
+    background-color: olivedrab;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 10px;
+    margin: 30px 40px 20px 40px;
+    color: white;
+    font-weight: 700;
+}
+
+.bottom-wrapper p {
+    margin-left: 40px;
+}
+
+a {
+    text-decoration: none;
+    color: olivedrab;
 }
